2006-02-22 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.*:
         * activate binreloc here
         * allow disabling of Eris polling
    * src/components/ogre/ConsoleObjectImpl.cpp: added command for turning eris polling on and off
    * src/components/ogre/widgets/ModelEdit.lua: default to not showing the model editor
    * ember,conf: don't show help on startup

2006-02-22 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/sound/SoundService.cpp: removed reference to Ogre

2006-02-22 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/Avatar.cpp: only adjust the position for the avatar if it has moved, not if there's only been rotation

2006-02-22 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberEntity.cpp: adjust the position from the Eris position, not the current ogre position, since this will for some entities with set offsets for contained items result in these items being constantly moved

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/WorldEmberEntity.cpp: always put the world at the center of the world

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/AvatarCamera.cpp: added some verbose logging output

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/Help.cpp: only show the help if it's specified in the config file
    * src/components/ogre/widgets/HelpWidget.xml: default to hiding the help
    * src/components/ogre/widgets/ServerBrowser.layout: remove the scroll bars from the table

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/modeldefinitions/creatures.modeldef.xml: added goblin and kobold

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/model/XMLModelDefinitionSerializer.cpp: made sure all real values really are exported as real values

2006-02-20 Erik Hjortsberg  <erik@katastrof.nu>
